src/objects/BFM_NF_e__c.object
<CustomObject>
    <fields>
        <fullName>Address_destination__c</fullName>
        <label>Address destination</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulment_Access_Key__c</fullName>
        <label>Annulment Access Key</label>
        <length>44</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulment_Fiscal_Doc_No__c</fullName>
        <label>Annulment Fiscal Doc No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annulment_Fiscal_Posting_Date__c</fullName>
        <label>Annulment Fiscal Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annulment_NF_e_Cancellation_Date__c</fullName>
        <label>Annulment NF-e Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annulment_Pdf_Reference__c</fullName>
        <label>Annulment Pdf Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annulment_Xml_Reference__c</fullName>
        <label>Annulment Xml Reference</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Billing_Document__c</fullName>
        <label>Billing Document</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNPJ_Destination_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CNPJ Destination Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NF-es (CNPJ Destination Account)</relationshipLabel>
        <relationshipName>NF_es1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNPJ_destination__c</fullName>
        <label>CNPJ destination</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPF_destination__c</fullName>
        <label>CPF destination</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_e__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CT-e</label>
        <referenceTo>BFM_CT_e__c</referenceTo>
        <relationshipName>BFM_NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complement_destination__c</fullName>
        <label>Complement destination</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complementary_information__c</fullName>
        <label>Complementary information</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_code_destination__c</fullName>
        <label>Country code destination</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_name_destination__c</fullName>
        <label>Country name destination</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery</label>
        <referenceTo>BFM_Delivery__c</referenceTo>
        <relationshipLabel>NF-es</relationshipLabel>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District_destination__c</fullName>
        <label>District destination</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_weight__c</fullName>
        <label>Gross weight</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Usage__c</fullName>
        <label>Material Usage</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipal_Name_Destination__c</fullName>
        <label>Municipal Name Destination</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipal_code_destination__c</fullName>
        <label>Municipal code destination</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF55_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NF55 Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NFS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NFS</label>
        <referenceTo>BFM_NFS__c</referenceTo>
        <relationshipLabel>NF-es</relationshipLabel>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Acc_Doc_Posting_Date__c</fullName>
        <label>NF Writer Acc Doc Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Acc_Document__c</fullName>
        <label>NF Writer Acc Document</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Document__c</fullName>
        <label>NF Writer Document</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_Writer_Posting_Date__c</fullName>
        <label>NF Writer Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NF_e_Total_Value__c</fullName>
        <label>NF-e Total Value</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NF_e_access_key__c</fullName>
        <externalId>true</externalId>
        <label>NF-e access key</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_creation_date__c</fullName>
        <label>NF-e creation date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NF_e_item_specie__c</fullName>
        <label>NF-e item specie</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_number__c</fullName>
        <label>NF-e number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NF_e_serie__c</fullName>
        <label>NF-e serie</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_destination__c</fullName>
        <label>Name destination</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nf_e_total_quantity__c</fullName>
        <label>Nf-e total quantity</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_destination__c</fullName>
        <label>Number destination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occurrence_SES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Occurrence SES</label>
        <referenceTo>BFM_Occurrence_SES__c</referenceTo>
        <relationshipLabel>NF-es</relationshipLabel>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_destination__c</fullName>
        <label>Phone destination</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_code_destination__c</fullName>
        <label>Postal code destination</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Predominant_product__c</fullName>
        <label>Predominant product</label>
        <length>72</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SES__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SES</label>
        <referenceTo>BFM_SES__c</referenceTo>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SUFRAMA_registration__c</fullName>
        <label>SUFRAMA registration</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Shipment of this NF-e.</description>
        <label>Shipment</label>
        <referenceTo>BFM_Shipment__c</referenceTo>
        <relationshipLabel>NF-es</relationshipLabel>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage_registration_destination__c</fullName>
        <label>Stage registration destination</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_destination__c</fullName>
        <label>State destination</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taker_CNPJ__c</fullName>
        <label>Taker CNPJ</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Taker_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Taker Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NF_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NF-e</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NF_e_number__c</columns>
        <columns>NF_e_access_key__c</columns>
        <columns>NF_e_creation_date__c</columns>
        <columns>CNPJ_destination__c</columns>
        <columns>Taker_CNPJ__c</columns>
        <columns>Delivery__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BFM_NFS_Cancellation_users_BFM_NF_e</fullName>
        <filterScope>Queue</filterScope>
        <label>BFM NFS Cancellation users</label>
        <queue>BFM_NFS_Cancellation_users</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>NF-e{00000}</displayFormat>
        <label>BFM NF-e Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NF-es</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>